# ProjectEffigy_EffigyGen

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  map_gen.rs  map_gen_tests.rs  noise_gen.rs
src/images/: map_as_image.rs  mod.rs
src/images/image_examples/: complex_images_test.rs  mod.rs  simple_images_tests.rs
